--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.STesting">
+        <activity android:name=".UI.QuestionActivity"></activity>
+        <activity
+            android:name=".UI.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.STesting.NoActionBar" />
         <activity android:name=".UI.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
