--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.STesting">
-        <activity android:name=".UI.QuestionActivity"></activity>
-        <activity
-            android:name=".UI.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.STesting.NoActionBar" />
-        <activity android:name=".UI.LoginActivity">
+        <activity android:name=".UI.SplashScreen" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UI.QuestionActivity" />
+        <activity android:name=".UI.MainActivity" />
+        <activity android:name=".UI.LoginActivity" />
     </application>
 
 </manifest>
