--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.activity:activity-ktx:1.3.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
